# aurora

./: .aiignore  .gitignore  AGENTS.md  Cargo.toml  README.md  ableton-link.ts  audio-control-router.ts  audio-ema.ts  audio-mappings.json  audio-transient-trigger.ts  automation-bridge.ts  automation-player.ts  automation-trigger.ts  bundler.toml  caretta.toml  clock-arbiter.ts  control-state-schema.ts  controls.css  controls.html  index.html  index.ts  mic-features.ts  midi-cc-schema.ts  midi-clock.ts  osc-validation.ts  output-routing.ts  package.json  preset-bundle-schema.ts  preset-morph.ts  shadertoy-import.ts  state-log.ts  tsconfig.json  vitest.config.ts  vst-osc-contract.json
.caretta/discovery/: framing-final.json  workspace.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/shaders/: imported.wgsl  vj_grid.wgsl  vj_palette.wgsl
bridge/: ableton-link.ts  audio-control-router.ts  audio-ema.ts  audio-mappings.json  audio-transient-trigger.ts  automation-bridge.ts  automation-player.ts  index.ts  mic-features.ts  preset-layers.ts  preset-morph.ts
crates/bevyosc-launcher/: Cargo.toml
docs/: convert-to-work-stall-diagnosis.md  dry-run.md  shader-regression-harness.md
docs/backlog/: frontier-threads.md  longer-horizon-threads.md
docs/incidents/: pr-99-credential-leak.md  (+1 more)
memory/: MEMORY.md  format_command_churn.md
scripts/: build-bridge.sh  build-desktop.sh  build-shaders.ts  dry-run-gate.ts  dry-run.ts  format-code.sh  package-desktop.sh  setup.sh  test-rust.sh  wgsl-to-typegpu-variant.ts
shaders/: geometry_field.ts  palette_fragment.ts  raw_entry.wgsl  vj_grid.ts  vj_palette.ts
shared/: bridge-connection.ts  bridge-debug.ts  bridge-transport.ts  control-state-schema.ts  demo-audio.ts  gpu-shader-routing.ts  midi-cc-schema.ts  osc-validation.ts  output-routing.ts  palette-color.ts  preset-bundle-schema.ts  shadertoy-api.ts  shadertoy-import.ts  shadertoy-key.ts  static-hosting.ts  vst-osc-contract.json
src/: main.rs  reconnect.ts
tests/: ableton-link.test.ts  audio-control-router.test.ts  audio-curve.test.ts  audio-ema.test.ts  audio-transient-trigger.test.ts  automation-playback.test.ts  automation-trigger-e2e.test.ts  automation-trigger.test.ts  clock-arbiter.test.ts  constants.ts  control-state-schema.test.ts  controls-midi.test.ts  global-setup.ts  latency-benchmark.test.ts  mic-features.test.ts  midi-cc-bindings.test.ts  midi-cc-schema.test.ts  midi-clock.test.ts  osc-validation.test.ts  output-routing.test.ts  preset-bundle.test.ts  preset-curves.test.ts  preset-layers.test.ts  preset-morph.test.ts  shader-baselines.json  shader-reference.ts  shader-regression.test.ts  shader-render.ts  shadertoy-import-regression.test.ts  shadertoy-import.test.ts  smoke.test.ts  state-log.test.ts  update-shader-baselines.ts  vst-osc-contract.test.ts  ws-fanout.test.ts
web/: controls.css  controls.html  index.html  projector-bridge.ts  shader.html  styles.css
(+166 files in other folders)
