[package]
name = "bevyosc"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "plugins/bevyosc-vst", "plugins/bevyosc-vst/xtask"]
resolver = "2"
# Bare `cargo build` / `cargo check` / `cargo test` at the workspace root only
# run against these packages (not the whole `--workspace` membership list).
#
# Automation (and humans) accidentally invoke host `cargo check` without
# `--target wasm32-unknown-unknown`, which pulls `bevy_winit`'s stripped-down
# `winit` dep and triggers "platform … not supported" on Linux runners.
#
# Explicit package selection still works: `cargo check -p bevyosc --target wasm32-unknown-unknown`,
# `cargo check -p bevyosc-vst`, `bun run check:wasm`, etc.
default-members = ["plugins/bevyosc-vst/xtask"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "std",
  "async_executor",
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_render",
  "bevy_shader",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "png",
  "webgpu",
] }
wasm-bindgen = "0.2.122"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

